# ha-ingestor

./:  subjected to the FULL_MODEL_CHAIN_DEEP_DIVE.md  .cursorrules  .dockerignore  .env  .env.backup  .env.backup.20251013-160204  .env.test.template  .gitignore  .gitignore.quality  .jscpd.json  .pre-commit-config.yaml  AI_ASSISTANT_GUIDE.md  AI_DEVELOPMENT_INDEX.md  CHANGELOG.md  CHILD_PROJECTS_INTEGRATION_GUIDE.md  CHILD_PROJECTS_QUICK_START.md  CLAUDE.md  COMPLETE_QUERY_DETAILS.md  COMPLETE_SESSION_SUMMARY.md  CONTRIBUTING.md  DEMO_READY.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE_EPIC_AI4.md  DEPLOYMENT_STATUS.md  DEPLOY_DATA_API_NOW.md  DEVELOPMENT.md  DEVELOPMENT_PATTERNS.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  EPIC_31_GIT_COMMIT_SUCCESS.md  EPIC_31_SUCCESS_REPORT.md  EPIC_31_SUMMARY.md  EPIC_32_COMPLETE.md  EPIC_32_GIT_COMMIT_SUCCESS.md  EPIC_AI4_COMPLETE_SUMMARY.md  EPIC_AI4_DEPLOYMENT_FINAL.md  EVALUATION_SUMMARY.md  GETTING_STARTED_EPIC_AI4.md  GITHUB_REPOSITORY_SETTINGS.md  HA_INGESTOR_V0.3.0_SPECIFICATION.md  (+60 more)
.agent-os/: config.yml
.bmad-core/: CHANGELOG-context7-kb-integration.md  CODE_REVIEW_INTEGRATION_SUMMARY.md  PROGRESSIVE_REVIEW_VALIDATION.md  core-config.yaml  install-manifest.yaml  user-guide.md  working-in-the-brownfield.md
.cursor/: AGENT_DEVELOPMENT_GUIDE.md  QUICK_REFERENCE.md
.github/: pull_request_template.md
config-examples/: influxdb-schema-examples.yaml  mqtt-config-examples.yaml
data/: sports_teams.db  webhooks.db
docs/: AI_AUTOMATION_CALL_TREE.md  AI_AUTOMATION_COMPREHENSIVE_GUIDE.md  ALL_CONFIGURATION_SERVICES_FIXED.md  API_COMPREHENSIVE_REFERENCE.md  API_DOCUMENTATION.md  API_DOCUMENTATION_AI_AUTOMATION.md  API_ENDPOINTS_REFERENCE.md  API_ENDPOINT_STANDARDIZATION_GUIDE.md  API_ENHANCEMENTS_EPIC_23.md  API_STATISTICS_ENDPOINTS.md  ARCHITECTURE_OVERVIEW.md  BMAD-HA-SIMULATOR-IMPLEMENTATION-TASKS.md  BMAD-HA-SIMULATOR-PLAN.md  BMAD-IMPLEMENTATION-TASKS.md  CALENDAR_SERVICE_DOCUMENTATION_INDEX.md  CHANGELOG_EPIC_23.md  CLI_REFERENCE.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  CONTAINER_MANAGEMENT_ENHANCEMENT_PLAN.md  CONTEXT7_INTEGRATION.md  CONVERSATIONAL_UI_USER_GUIDE.md  Context7-BMad-Integration-Plan.md  Context7-KB-Cache-Usage-Guide.md  DASHBOARD_ENHANCEMENT_ROADMAP.md  DASHBOARD_FINAL_STATUS.md  DASHBOARD_INTEGRATION_COMPLETE.md  DASHBOARD_WALKTHROUGH_COMPLETE.md  DATA_BACKEND_IMPLEMENTATION_GUIDE.md  DATA_ENHANCEMENT_QUICK_REFERENCE.md  DATA_ENRICHMENT_ARCHITECTURE.md  DATA_ENRICHMENT_DEPLOYMENT_GUIDE.md  DATA_ENRICHMENT_PRD.md  DATA_FLOW_FIXES_SUMMARY.md  DATA_SOURCES_AND_STRUCTURES_ENHANCEMENT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIONS_ANALYSIS.md  DEPLOYMENT_OPTIONS_EXECUTIVE_SUMMARY.md  (+107 more)
examples/: common_patterns_demo.py  filter_example.py  filter_performance_demo.py  transformation_system_demo.py
ha_ingestor/: __init__.py  config.py  main.py  pipeline.py
implementation/: 100_PERCENT_DEPLOYMENT_PLAN.md  2025-10-25-DEPLOYMENT_SUMMARY.md  ACTIVE_DATA_SOURCES_BUG_FIX.md  ACTIVE_DATA_SOURCES_DEEP_DIVE.md  ACTIVE_DATA_SOURCES_UI_DEPLOYMENT_COMPLETE.md  ADMIN_API_SEPARATION_APPROVAL_SUMMARY.md  AI1-19_SAFETY_VALIDATION_COMPLETE.md  AI1-20_SIMPLE_ROLLBACK_COMPLETE.md  AI1-21_NL_GENERATION_COMPLETE.md  AI1-22_SIMPLE_DASHBOARD_COMPLETE.md  AI4.1_HA_CLIENT_FOUNDATION_COMPLETE.md  AI4.2_AUTOMATION_PARSER_COMPLETE.md  AI4.3_RELATIONSHIP_CHECKER_COMPLETE.md  AI4.4_INTEGRATION_TESTING_COMPLETE.md  AIR_QUALITY_SERVICE_MIGRATION_COMPLETE.md  AI_AUTOMATION_ARCHITECTURE_REVIEW.md  AI_AUTOMATION_DEPLOYMENT_COMPLETE.md  AI_AUTOMATION_GAP_ANALYSIS.md  AI_AUTOMATION_GENERATION_PLAN.md  AI_AUTOMATION_PERFORMANCE_OPTIMIZATION_COMPLETE.md  AI_AUTOMATION_PHASE2_RECOMMENDATIONS.md  AI_AUTOMATION_PRD_COMPLETE.md  AI_AUTOMATION_REFACTORING_SUMMARY.md  AI_AUTOMATION_REFACTOR_DEPLOYMENT_COMPLETE.md  AI_AUTOMATION_REVIEW_SUMMARY.md  AI_AUTOMATION_UI_API_FIXES.md  AI_AUTOMATION_UI_COMPLETE.md  AI_AUTOMATION_UI_STATUS_FIX.md  AI_PATTERN_DETECTION_IMPLEMENTATION_PLAN.md  AI_TELEMETRY_MODAL_INTEGRATION_COMPLETE.md  AI_UI_BLANK_PAGE_FIX_COMPLETE.md  AI_UI_COMPREHENSIVE_TEST_RESULTS.md  AI_UI_FRAMER_MOTION_FIX_COMPLETE.md  AI_UI_VISUAL_TEST_COMPLETE.md  ALERT_CLEANUP_ENHANCEMENT_SUMMARY.md  ALL_CONFIGURATION_SERVICES_FIXED.md  ALL_DOCUMENTATION_UPDATED.md  ALL_FIXES_COMPLETE_SUMMARY.md  ALL_PHASES_COMPLETE.md  ALPHA_RESET_CHECKLIST.md  (+614 more)
infrastructure/: README.md  docker-logging.conf  env.ai-automation.miner  env.ai-automation.template  env.automation-miner  env.calendar.template  env.example  env.influxdb.template  env.production  env.sports.template  env.weather.template  env.websocket.template
prometheus/: prometheus.yml
reports/: EPIC_32_SUCCESS_REPORT.md  SETUP_COMPLETE.md
scripts/: HOME_ASSISTANT_AUTOMATION_API_RESEARCH.md  README-HUGGINGFACE-SEARCH.md  README.md  analyze-code-quality.ps1  analyze-code-quality.sh  backup-influxdb.sh  bmad-restructure-phase2.ps1  check-ha-automations.ps1  check-hacs-status.py  check_devices.py  cleanup.sh  clear-devices-db.py  configure-weather-api.ps1  delete_all_automations.py  deploy-enhanced-fallback.ps1  deploy-enhanced-fallback.sh  deploy-with-fallback.ps1  deploy-with-fallback.sh  deploy-with-validation.ps1  deploy-with-validation.sh  deploy-wizard.sh  deploy.ps1  deploy.sh  deploy_and_test_phase1.py  device-comparison-test.py  discover-and-store-devices.py  evaluate-conversational-system.ps1  execute-influxdb-reset.sh  force-zigbee-discovery.py  ha-api-zigbee-fix.py  manual-device-discovery.py  quantize-nlevel-models.sh  query_api.py  quick-quality-check.sh  reload-devices.py  requirements-search.txt  research_flash_command.py  reset-influxdb-schema.ps1  reset-influxdb-schema.sh  restore-influxdb.sh  (+50 more)
services/: README_ARCHITECTURE_QUICK_REF.md  test_ask_ai_direct.py
shared/: alert_manager.py  auth.py  correlation_middleware.py  enhanced_ha_connection_manager.py  ha_connection_manager.py  influxdb_query_client.py  log_validator.py  logging_config.py  metrics_api.py  metrics_collector.py  system_metrics.py
test-results/: .last-run.json  (+7 more)
(+2309 files in other folders)
